RBS-VNS-0002, Downgrade to jdk 1.8 due to openshift.